# LNN

./: .gitignore  CMakeLists.txt  Makefile
doc/: LogicNN
lua/: main.lua
src/: .clang_complete  BasicLayer.hpp  ILayer.hpp  lnn.hpp  main.cpp  matrix.hpp  vector.hpp
